--- a/Website_Blocked.html
+++ b/Website_Blocked.html
@@ -23,20 +23,11 @@
 <body>
 
 <!-- Google Analytics -->
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107431555-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments)};
-  gtag('js', new Date());
-
-  gtag('config', 'UA-107431555-1');
-</script>
-
+<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=59dcb10b60ff1200126fab78&product=sticky-share-buttons' async='async'></script>
 <!-- /Google Analytics -->
 
 
-<section class="mbr-section content4 cid-qvAaN1KLfi" id="content4-1h" data-rv-view="127">
+<section class="mbr-section content4 cid-qvAaN1KLfi" id="content4-1h" data-rv-view="180">
 
     
 
@@ -52,7 +43,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
