create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">free html site builder</a></section><section class="counters2 counters cid-qNsPPyszlf" id="counters2-1d">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop website maker</a></section><section class="counters2 counters cid-qNsPPyszlf" id="counters2-1d">
 
     
 
@@ -77,10 +77,10 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-browse"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-5">WebPage</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-5"></h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Web Page</h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-5">Web Page</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">This Package Has Webpage Designs @ You Need....</p>
                             </div>
                         </div>
@@ -89,10 +89,10 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-mobile"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-5">Moblie Apps</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-5"></h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Android &amp; iOS Apps</h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-5">Android &amp; iOS Apps</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">Your Customers Can View Your Business Updates Through Moblies....</p>
                             </div>
                         </div>
@@ -101,10 +101,10 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-cart-add"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-5">Online Shopping</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-5"></h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Buy (or) Order Online</h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-5">Buy (or) Order Online</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">You Customers Can Buy (or) Order Things From Your Shop Online.....</p>
                             </div>
                         </div>
@@ -113,10 +113,10 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-help"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-5">Notification</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-5"></h3>
                             </div>
                             <div class="card-texts">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">SMS &amp; App Notify</h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-5">SMS &amp; App Notify</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">Your Customers Can Know Recent Update In Your Business Though This Easily....</p>
                             </div>
                         </div>
@@ -341,7 +341,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dm26LQFsnHzftCRH+Qxp8b/XrlUVTYMm+J5roNqwwGwHMeZ4w+fO8s1rgoIXMPR9c6LpkBJnRqu24Jp11RAyg/kuSoixbDrTTY1fiivfCmnnPFLobLQU/EMD1cBBExhP" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dbV+4ZFhSkaDjiTZLRluzyd895uhZNpsXCklcuODDTnfXBPj3ZsmHONt3Fndp0i9nHB3VMRbnwLBJvozHUnuoKptHq00TT9w8GTcB+haGcOlJaoylxTzHGdiTedoZrUH" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-w">
                         <span class="input-group-btn">
