create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="counters2 counters cid-qNsPPyszlf" id="counters2-1d">
+<section class="engine"><a href="https://mobirise.ws/q">offline website creator download</a></section><section class="counters2 counters cid-qNsPPyszlf mbr-parallax-background" id="counters2-1d">
 
     
 
@@ -341,7 +341,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b3mv5iQLPYhbJmz8/EuGpc5eX6jMgfIKe2PJO5d5xKs8RJVMKOvdhT09LyMotpa9qBfJoHhIDniwHp94khV0Wm60vDNENfaqZTC49zWIzuq+dp9wWXPBSI6B+abd49N6" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vA6mqNOcAbiaE3Q7V53bgUfCY+3RfX7QuDJMEGiVo1lNMGiBz+GPdIZox1WIR7OHi9qE8C7GlnqkKnWIz8Ghej/HIBO9NPU56rYGVi+IvG4rh0MHTvD4FDb3+K7bAO4R" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-w">
                         <span class="input-group-btn">
@@ -438,8 +438,8 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
